# datasette-alerts-desktop

./: .gitignore  Justfile  pyproject.toml
datasette_alerts_desktop/: __init__.py
tests/: test_alerts_desktop.py
